--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 Django==5.2
 django-bootstrap-modal-forms==3.0.5
 django-safedelete==1.4.1
+django-widget-tweaks==1.5.0
 packaging==25.0
 pillow==11.2.1
 psycopg2-binary==2.9.10
