--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 Django==5.2
 django-bootstrap-modal-forms==3.0.5
+django-filter==25.1
 django-safedelete==1.4.1
 django-widget-tweaks==1.5.0
 packaging==25.0
