--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pyHanko==0.29.0
 pyhanko-certvalidator==0.27.0
 pypdf==5.6.0
 python-bidi==0.6.6
+python-dotenv==1.1.0
 PyYAML==6.0.2
 reportlab==4.4.1
 requests==2.32.3
